--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -13,5 +13,11 @@ jobs:
   python-job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+        with:
+         sparse-checkout: .
       - name: checking python version
-        run: python --version
+        run: |
+          python --version
+          pwd
+          ls
