--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -11,6 +11,7 @@ jobs:
       - name: Print goodbye
         run: echo "Done - bye!"
   python-job:
+    needs: first-job
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
