--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -23,4 +23,4 @@ jobs:
           python --version
           pwd
           python3 test-python.py
-          echo "{{ toJSON(github.event) }}"
+          echo "${{ toJSON(github.event) }}"
